Dark mode fixes.

--- a/static/styles/index dark.css
+++ b/static/styles/index dark.css
@@ -205,6 +205,10 @@ header:hover .language-change {
   transition: all 0.5s ease;
 }
 
+header:hover .darkmode-change {
+  color: black;
+}
+
 /* ------------------- Logo ------------------- */
 
 .ouiLogo{
